# geulbus

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  release-please-config.json
.github/workflows/: release-please.yaml  release.yml  tf.yml
.tf/: org_permissions.tf  permissions.tf  repository.tf
crates/geulbus/: Cargo.toml
crates/geulbus-core/: Cargo.toml  README.md
crates/geulbus-core/src/: config.rs  engine.rs  evdev.rs  lib.rs
crates/geulbus-core/tests/: oracle.rs  schema.rs
crates/geulbus-core/tests/fixtures/: example.set.xml
crates/geulbus/data/: geulbus-setup.py  ibus-setup-geulbus.desktop
crates/geulbus/examples/: drive.rs
crates/geulbus/src/: engine.rs  factory.rs  ibus_lookup_table.rs  ibus_property.rs  main.rs  paths.rs  settings.rs
crates/presguel-core/: Cargo.toml
crates/presguel-core/src/: config.rs  engine.rs  evdev.rs  expr.rs  lib.rs  unit.rs
crates/presguel-core/tests/: oracle.rs
crates/presguel-ibus/data/: ibus-setup-presguel.desktop  presguel-setup.py
crates/presguel-ibus/examples/: drive.rs
crates/presguel-ibus/src/: addr.rs  engine.rs  factory.rs  main.rs  paths.rs  settings.rs
data/: geulbus.xml  presguel.xml
research/: 00-environment.md  01-nalgaeset-format.md  02-config-decode.md  03-ibus-zbus.md  04-hangul-unicode.md  05-wayland-xkb-keyval.md  06-keyboard-layout-decision.md  07-ibus-engine-xkb-pairing.md  ngs-automata-help.txt  ngs-coderef-consonants.txt  ngs-coderef-vowels.txt
schema/: README.md
scripts/: install.sh  lib-xkb-geulbus.sh  setup-capslock-hangul.sh  setup-hanja-key.sh
