[workspace]
resolver = "2"
members = [
    "crates/geulbus-core",
    "crates/geulbus",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/chaotic-ground/geulbus"
authors = ["lens0021 <lorentz0021@gmail.com>"]

[workspace.dependencies]
geulbus-core = { path = "crates/geulbus-core", version = "0.2.0" }
quick-xml = "0.37"
thiserror = "2"
