[package]
name = "geulbus-core"
description = "날개셋(nalgaeset) 입력 설정을 해석하는 한글 조합 엔진 (ibus 비의존 순수 라이브러리)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
documentation = "https://docs.rs/geulbus-core"
homepage = "https://github.com/chaotic-ground/geulbus"
keywords = ["hangul", "ime", "korean", "input-method", "nalgaeset"]
categories = ["internationalization", "text-processing", "parser-implementations"]
# 하한은 의존성 hanmo 의 MSRV
rust-version = "1.70"
# tests/schema.rs 는 저장소 루트 schema/ 의 XSD 를 읽으므로 배포본에서는 실행 불가
exclude = ["tests/schema.rs"]

[dependencies]
hanmo = "0.1"
quick-xml.workspace = true
thiserror.workspace = true
