[package]
name = "geulbus"
description = "geulbus: 날개셋 호환 ibus 한글 입력기 엔진 (zbus 기반)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "geulbus"
path = "src/main.rs"

[dependencies]
geulbus-core.workspace = true
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }

[dev-dependencies]
futures-util = "0.3"
tokio = { version = "1", features = ["macros", "rt", "time"] }
